 (Format: Year/Month/Day)
Changes for 1.0rc2:
*06/06/18:
   * Fixed bug #1507754 iconbar text was not updated to match titlebar (Henrik)
     WinClient.cc
   * Added support for _NET_WM_WINDOW_TYPE_DIALOG and
     _NET_FRAME_EXTENTS (Henrik)
     src/Ewmh.hh/cc, fluxbox.hh/cc, Window.cc
   * Updated german translation (Thanks Michael Bueker m.bueker at berlin de)
     nls/de_DE/Translation.m
*06/06/16:
   * Fix crash when closing a window while cycling (Mark)
     FocusControl.cc
-------------------------------------------------------------
Changes for 1.0rc:
*06/06/11:
   * Added support for _NET_WM_MOVERESIZE (Henrik)
     Ewmh.hh/cc, Window.hh/cc
   * Added support for urgency hint.
     This make apps, that support this hint, flash the titlebar and iconbar
     when they want attention.
     For example gaim.
     (Thanks Mark Tiefenbruck)
     fluxbox.hh, Ewmh.hh/cc, WinClient.cc
*06/06/10:
   * Added new command: ToggleCmd
     Works like a macro but executes the commands one at the time in order.
     Example:
     Mod1 T :ToggleCmd {Exec xterm} {NextWindow}
     When Mod1 T is press the first time it will start xterm, the second time
     it will do NextWindow. When it reaches end it will start at the beginning.
     (Thanks Mark Tiefenbruck)
     src/FbCommandFactory.cc, src/FbTk/MacroCommand.{hh,cc}
   * Fixed resize box bug.
     The text used to determine the size used space, which could have
     different width than characters on some fonts.
     (Thanks Thanks Scott Kuhl)
   * Pressing shift while pressing enter in menu item will fake a 
     right mouse button press. Usefull when inc/decrease alpha/size in menu. 
     (Thanks Mark Tiefenbruck)
     src/FbTk/Menu.cc 
   * Added docs for session.titlebar.left/right.
     Added docs about middle click on workspace menu.
     Improved danish translation.
     (Thanks Jonas Koelker)
     doc/asciidoc/fluxbox.txt
   * Fix building on machines without iconv [sf.net #1499402] (Simon)
     FbTk/FbString.cc